--- a/css/styles.css
+++ b/css/styles.css
@@ -126,16 +126,10 @@ header {
   align-items: center;
   padding: 0.5rem 2vw;
 }
-header h1 {
-  font-size: 1.6rem;
-  font-weight: 300;
-  padding-left: 0.5rem;
-  color: #cc7a26;
-}
 
 /* NAVIGATION STUFF GOES HERE  */
 #navWrapper {
-  background-color: #265b7d;
+  background-color: #292422;
 }
 
 nav button {
@@ -192,7 +186,7 @@ nav ul li a {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 nav ul li a:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(126, 121, 121, 0.5);
 }
 nav ul.open {
   display: block;
@@ -206,9 +200,9 @@ main p {
 }
 main h1 {
   padding: 1rem 2vw 0.5rem 2vw;
-  font-size: 1.5rem;
-  color: #265b7d;
-  font-weight: 300;
+  font-size: 2.1rem;
+  color: rgb(220, 220, 236);
+  font-weight: 500;
 }
 main .hero {
   width: 100%;
@@ -226,6 +220,7 @@ main div.storyGrid span {
   display: block;
   text-align: center;
   font-size: 0.75rem;
+  font-weight: 300;
 }
 main div.storyGrid .pics, main div.storyGrid .lead {
   padding: 0.5rem 2vw;
@@ -239,7 +234,7 @@ main div.storyGrid .lead {
 
 /* FOOTER  */
 #footerWrapper {
-  background-color: #1b1b1b;
+  background-color: #292422;
 }
 
 footer {
@@ -253,14 +248,69 @@ footer a {
 }
 
 /*Main*/
-.breakingnews {
+.footerGrid {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  margin: 0 2vw;
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
+}
+.footerGrid h4 {
+  padding-top: 2rem;
 }
 
 @media only screen and (min-width: 35rem) {
   /* NAVIGATION STUFF GOES HERE  */
+  nav button {
+    display: none;
+  }
+  #primaryNav {
+    display: flex;
+  }
+  nav ul {
+    display: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  nav ul li.active a {
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  nav ul li a {
+    display: block;
+    padding: 0.75rem 2vw;
+    font-size: 1.1rem;
+    color: #f4f1f1;
+    text-decoration: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+  }
+  nav ul li a:hover {
+    background-color: rgba(126, 121, 121, 0.5);
+  }
+  main div.storyGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  main div.storyGrid .lead {
+    grid-column: 1/span 3;
+  }
+  #footerWrapper {
+    background-color: #292422;
+  }
+  footer {
+    font-size: 0.85rem;
+    padding: 1rem 0;
+    color: #bbb;
+    text-align: center;
+  }
+  footer a {
+    color: #eee;
+  }
+  /*Main*/
+  .footerGrid {
+    display: grid;
+    margin: 0 2vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+  }
 }
 @media only screen and (min-width: 64rem) {
   header, nav, main {
@@ -268,11 +318,55 @@ footer a {
     margin: auto;
   }
   /* NAVIGATION STUFF GOES HERE  */
-  main div.storyGrid {
-    grid-template-columns: 1fr 1fr 1fer 1fr;
+  nav button {
+    display: none;
   }
-  main div.storyGrid lead {
+  #primaryNav {
+    display: flex;
+  }
+  nav ul {
+    display: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  nav ul li.active a {
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  nav ul li a {
+    display: block;
+    padding: 0.75rem 2vw;
+    font-size: 1.1rem;
+    color: #f4f1f1;
+    text-decoration: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+  }
+  nav ul li a:hover {
+    background-color: rgba(126, 121, 121, 0.5);
+  }
+  main div.storyGrid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  main div.storyGrid .lead {
     grid-column: 1/span 3;
     grid-row: 1/span 2;
+  }
+  #footerWrapper {
+    background-color: #292422;
+  }
+  footer {
+    font-size: 0.85rem;
+    padding: 1rem 0;
+    color: #bbb;
+    text-align: center;
+  }
+  footer a {
+    color: #eee;
+  }
+  .footerGrid {
+    display: grid;
+    margin: 0 2vw;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
   }
 }
