--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -1,1 +1,50 @@
 /* NAVIGATION STUFF GOES HERE  */
+nav button{display: none;}
+#primaryNav{display: flex;}
+nav {
+    ul {
+        display: none;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    
+    ul li.active a{background-color: rgb(0,0,0,0.25);}
+    ul li a {
+        display: block;
+        padding: .75rem 2vw;
+        font-size: 1.1rem;
+        color: #f4f1f1;
+        text-decoration: none;
+        border-top: 1px solid rgba(0,0,0,.5);
+    }
+    ul li a:hover {
+        background-color: rgba(126, 121, 121, 0.5);
+    }
+}
+//Main//
+main{
+    div.storyGrid {
+        grid-template-columns:1fr 1fr 1fr ;
+        .lead{
+            grid-column: 1 / span 3;}
+        }
+    }
+    //Fotter//
+    #footerWrapper {background-color: #292422; }
+footer {
+    font-size: .85rem;
+	padding: 1rem 0;
+	color: #bbb;
+	text-align: center;
+	a{color: #eee;}
+}
+/*Main*/
+.footerGrid{
+    display: grid;
+    margin: 0 2vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+
+    
+}
