--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -19,12 +19,7 @@ header {
     grid-template-columns: 51px auto;
     align-items: center;
 	padding: .5rem 2vw;
-	h1 {
-        font-size: 1.6rem;
-        font-weight: $lightWeight;
-        padding-left: .5rem;
-        color: $primaryColor;
-    }
+	
 } // end header
 
 /* NAVIGATION STUFF GOES HERE  */
@@ -78,7 +73,7 @@ nav {
         border-top: 1px solid rgba(0,0,0,.2);
     }
     ul li a:hover {
-        background-color: rgb(0,0,0,.5);
+        background-color: rgba(126, 121, 121, 0.5);
     }
     /*toggle the nav bar to expand down */
     ul.open {display:block}
@@ -89,9 +84,9 @@ main {
  	p {padding: .5rem 2vw; color: #333; line-height: 125%;}
 	h1 {
         padding: 1rem 2vw .5rem 2vw; 
-        font-size: 1.5rem; 
-        color: $secondaryColor;
-        font-weight: $lightWeight
+        font-size: 2.1rem; 
+        color: rgb(220, 220, 236);
+        font-weight: $normalWeight
     }
     .hero {width: 100%;}
     .hero img {
@@ -106,6 +101,7 @@ main {
             display: block;
             text-align: center;
             font-size: .75rem;
+            font-weight:$lightWeight;
         }
         .pics,.lead{padding: .5rem 2vw;}
         .pics img,.lead img {width:100%;}
@@ -117,7 +113,7 @@ main {
 
 
 /* FOOTER  */
-#footerWrapper {background-color: #1b1b1b; }
+#footerWrapper {background-color: #292422; }
 footer {
     font-size: .85rem;
 	padding: 1rem 0;
@@ -126,10 +122,13 @@ footer {
 	a{color: #eee;}
 }
 /*Main*/
-.breakingnews {
+.footerGrid{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    margin: 0 2vw;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
-
-    
+h4{
+        padding-top: 2rem;
+    }
 }
+    
