--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $primaryColor: #cc7a26; 
 $secondaryColor: #265b7d;
 
-$menuColor: #265b7d;
+$menuColor: #292422;
 
 $defaultFont:'Spline Sans', sans-serif;
 $lightWeight: 300;
